--- a/index.html
+++ b/index.html
@@ -3,52 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Online-Yoga</title>
+    <script src="https://kit.fontawesome.com/fa14704784.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <div class="container">
       <div class="navbar">
-        <div class="logo">
-          <div class="logo-img"></div>
-          <div class="logo-name">
-            <h2>ONLINE YOGA</h2>
+        <div class="web-name">
+          <div class="name">
+          <h2>Online Yoga</h2>
           </div>
         </div>
-        <div class="navlist">
-          <ul>
-            <li>
-              <a href="Home">Home</a>
-            </li>
-            <li>
-              <a href="Acount">Acount</a>
-            </li>
-            <li>
-              <a href="About">About</a>
-            </li>
-            <li>
-              <a href="Contact">Contact</a>
-            </li>
-            <li>
-              <a href="Whatsapp">Whatsapp</a>
-            </li>
-          </ul>
+        <div class="nav-list">
+          <div class="list-box">
+           <p>FITNESS</p>
+          </div>
+          <div class="list-box">
+            <p>SPORTS</p>
+          </div>
+          <div class="list-box">
+            <P>CARE</P>
+          </div>
+          <div class="list-box">
+            <P>MIND</P>
+          </div>
+          <div class="list-box">
+            <P>STORE</P>
+          </div>
+          <div class="nav-icon">
+            <div class="get-app">
+              <p>GET APP</p>
+            </div>
+            <div class="user-icon">
+              <i class="fa-solid fa-user"></i>
+            </div>
+            <div class="card-icon">
+              <i class="fa-solid fa-cart-arrow-down"></i>
+            </div>
+          </div>
         </div>
+      </div>
+      <div class="home-card">
+        <div class="home-list">
+          <div class="home-box">Home</div>
+          <div class="home-box">Live</div>
+          <div class="home-box">Cult</div>
+          <div class="online-class">Online Yoga Classes</div>
+        </div>
+        <div class="accounts">
+          <p>Sign In</p>
+          <p>|</p>
+          <p>Sign Up</p>
+        </div>
+      </div>
+       <div class="top-card">
+         <div class="top-img">
+          <img src="/g" alt="">
+         </div>
+         <div class="top-text"></div>
+       </div>
       </div>
 
 
 
 
-
-
-
-
-
-
-      <div class="header"></div>
-      <div class="instructor"></div>
-      <div class="footer"></div>
     </div>
   </body>
 </html>
