img and discraption update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
       <div class="navbar">
         <div class="web-name">
           <div class="name">
@@ -42,6 +41,7 @@
               <i class="fa-solid fa-cart-arrow-down"></i>
             </div>
           </div>
+          
         </div>
       </div>
       <div class="home-card">
@@ -57,17 +57,86 @@
           <p>Sign Up</p>
         </div>
       </div>
-       <div class="top-card">
-         <div class="top-img">
-          <img src="/g" alt="">
-         </div>
-         <div class="top-text"></div>
-       </div>
+      <div class="container">
+        <div class="title">
+          <h2>Online Yoga Classes</h2>
+          <p>Learn yoga online from best yoga experts only on online yoga.
+          </p>
+        </div>
+        <div class="img-box">
+        <div class="img-card">
+          <img src="/girl-img.png" alt="">
+        </div>
+        <div class="text-card">
+          <h2>Yoga for Beginners</h2>
+          <p>This Yoga For Beginner’s Pack is just what you need to ignite 
+          your passion for yoga! Whether you are a complete beginner, or have 
+          tried yoga in the past and are ready to really get going, these 5 
+          sessions in this pack will show you the way. This course is 
+          designed for the complete beginner, so there’s no need to be wary 
+          if you have no previous yoga experience. </p>
+        </div>
       </div>
-
-
-
-
+      <div class="img-box">
+        <div class="img-card">
+          <img src="/boy.png" alt="">
+        </div>
+        <div class="text-card">
+          <h2>Yoga for Digestion</h2>
+          <p>This is a relevant pack in today's day and age where our food and sleep habits are erratic and they hence have a deep impact on our digestive and gut health.
+            We all now know that our gut health affects our mood, weight, metabolism, hormones and overall health. We have 6 half hour sessions in this pack, so whether you have been enjoying eating rich foods, or been eating erratically - These sessions will aid in digestion and reset your system. Please do ensure you have eaten your last heavy meal 3 hours before doing this practice.
+            </p>
+        </div>
+      </div>
+      <div class="img-box">
+        <div class="img-card">
+          <img src="/girl-two.png" alt="">
+        </div>
+        <div class="text-card">
+          <h2>Surya Namaskar</h2>
+          <p>Surya Namaskar is a very popular yoga practice. This videos introduces us to the concept of Surya Namaskar and its benefits, It also illustrates the many different kinds of Surya Namaskar practiced in various traditions.
+          </p>
+        </div>
+      </div>
+      <div class="img-box">
+        <div class="img-card">
+          <img src="/girl-three.png" alt="">
+        </div>
+        <div class="text-card">
+          <h2>Yoga Strength</h2>
+          <p>This series is an introduction to working on physical strength, with simple to follow instructions of some of the classical and popular asanas of Hatha yoga. The focus will be on realizing and enhancing physical strength that is required for our everyday activities.
+          </p>
+        </div>
+      </div>
+      <div class="img-box">
+        <div class="img-card">
+          <img src="/girl-four.png" alt="">
+        </div>
+        <div class="text-card">
+          <h2>Arm Balance Yoga Poses</h2>
+          <p>This pack will help you move past fear, build better balance, strengthen your arm and core muscles and learn and practice arm balancing poses.
+          </p>
+        </div>
+      </div>
+      <div class="img-box">
+        <div class="img-card">
+          <img src="/girl-five.png" alt="">
+        </div>
+        <div class="text-card">
+          <h2>Yoga for Weight Loss</h2>
+          <p>The sessions in this pack will consist of Vinyasa Practises in which postures are performed one after the other in a smooth continuous motion. It might seem challenging at first, but please take it at your own pace and allow the body to adapt over a few classes. Vinyasa Yoga builds heat in the body and improves strength and stamina which leads to weight loss, when practiced regularly. These sessions have been created by Lara Saluja, Anil and Anvita. 
+          </p>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-linkedin"></i>
+        </div>
+      </div>
+      
     </div>
   </body>
 </html>
