--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="img-box">
         <div class="img-card">
-          <img src="/girl-img.png" alt="">
+          <img src="./boy.png" alt="">
         </div>
         <div class="text-card">
           <h2>Yoga for Beginners</h2>
@@ -79,7 +79,7 @@
       </div>
       <div class="img-box">
         <div class="img-card">
-          <img src="/boy.png" alt="">
+          <img src="./girl-five.png" alt="">
         </div>
         <div class="text-card">
           <h2>Yoga for Digestion</h2>
@@ -90,7 +90,7 @@
       </div>
       <div class="img-box">
         <div class="img-card">
-          <img src="/girl-two.png" alt="">
+          <img src="./girl-four.png" alt="">
         </div>
         <div class="text-card">
           <h2>Surya Namaskar</h2>
@@ -100,7 +100,7 @@
       </div>
       <div class="img-box">
         <div class="img-card">
-          <img src="/girl-three.png" alt="">
+          <img src="./girl-two.png" alt="">
         </div>
         <div class="text-card">
           <h2>Yoga Strength</h2>
@@ -110,7 +110,7 @@
       </div>
       <div class="img-box">
         <div class="img-card">
-          <img src="/girl-four.png" alt="">
+          <img src="./girl-img.png" alt="">
         </div>
         <div class="text-card">
           <h2>Arm Balance Yoga Poses</h2>
@@ -120,7 +120,7 @@
       </div>
       <div class="img-box">
         <div class="img-card">
-          <img src="/girl-five.png" alt="">
+          <img src="./girl-three.png" alt="">
         </div>
         <div class="text-card">
           <h2>Yoga for Weight Loss</h2>
